--- a/example/tnt-example.ipynb
+++ b/example/tnt-example.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "tnt.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNKhWsjkWftvzN2B7y9Ts+0",
+      "authorship_tag": "ABX9TyM8yuyjgdWtmf+XkfxZu4xi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,64 +59,66 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j9_uMOjYchxz",
-        "outputId": "13325645-9264-4431-8d5a-5e6bcf63a0c6"
+        "outputId": "fcc18edf-fb54-402e-8170-8ca3228f67fd"
       },
       "source": [
-        "!pip install -i https://test.pypi.org/simple/ tnt-tensorflow==0.1.0"
+        "!pip install tnt-tensorflow"
       ],
-      "execution_count": 32,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Looking in indexes: https://test.pypi.org/simple/\n",
-            "Collecting tnt-tensorflow==0.1.0\n",
-            "  Downloading https://test-files.pythonhosted.org/packages/87/18/0a8cb776c7c70f2f3fa6aa2e76108105f81e1081a3e190a896ce4532380b/tnt_tensorflow-0.1.0-py3-none-any.whl (10 kB)\n",
-            "Requirement already satisfied: einops~=0.3.0 in /usr/local/lib/python3.7/dist-packages (from tnt-tensorflow==0.1.0) (0.3.2)\n",
-            "Requirement already satisfied: tensorflow~=2.5.0 in /usr/local/lib/python3.7/dist-packages (from tnt-tensorflow==0.1.0) (2.5.2)\n",
-            "Requirement already satisfied: six~=1.15.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (1.15.0)\n",
-            "Requirement already satisfied: keras-preprocessing~=1.1.2 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (1.1.2)\n",
-            "Requirement already satisfied: typing-extensions~=3.7.4 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (3.7.4.3)\n",
-            "Requirement already satisfied: termcolor~=1.1.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (1.1.0)\n",
-            "Requirement already satisfied: absl-py~=0.10 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (0.12.0)\n",
-            "Requirement already satisfied: gast==0.4.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (0.4.0)\n",
-            "Requirement already satisfied: astunparse~=1.6.3 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (1.6.3)\n",
-            "Requirement already satisfied: numpy~=1.19.2 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (1.19.5)\n",
-            "Requirement already satisfied: opt-einsum~=3.3.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (3.3.0)\n",
-            "Requirement already satisfied: google-pasta~=0.2 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (0.2.0)\n",
-            "Requirement already satisfied: tensorflow-estimator<2.6.0,>=2.5.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (2.5.0)\n",
-            "Requirement already satisfied: keras-nightly~=2.5.0.dev in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (2.5.0.dev2021032900)\n",
-            "Requirement already satisfied: wrapt~=1.12.1 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (1.12.1)\n",
-            "Requirement already satisfied: tensorboard~=2.5 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (2.7.0)\n",
-            "Requirement already satisfied: grpcio~=1.34.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (1.34.1)\n",
-            "Requirement already satisfied: flatbuffers~=1.12.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (1.12)\n",
-            "Requirement already satisfied: wheel~=0.35 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (0.37.0)\n",
-            "Requirement already satisfied: h5py~=3.1.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (3.1.0)\n",
-            "Requirement already satisfied: protobuf>=3.9.2 in /usr/local/lib/python3.7/dist-packages (from tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (3.17.3)\n",
-            "Requirement already satisfied: cached-property in /usr/local/lib/python3.7/dist-packages (from h5py~=3.1.0->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (1.5.2)\n",
-            "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (1.8.0)\n",
-            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (3.3.6)\n",
-            "Requirement already satisfied: setuptools>=41.0.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (57.4.0)\n",
-            "Requirement already satisfied: google-auth<3,>=1.6.3 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (1.35.0)\n",
-            "Requirement already satisfied: requests<3,>=2.21.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (2.23.0)\n",
-            "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (0.4.6)\n",
-            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (1.0.1)\n",
-            "Requirement already satisfied: tensorboard-data-server<0.7.0,>=0.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (0.6.1)\n",
-            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.7/dist-packages (from google-auth<3,>=1.6.3->tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (0.2.8)\n",
-            "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from google-auth<3,>=1.6.3->tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (4.2.4)\n",
-            "Requirement already satisfied: rsa<5,>=3.1.4 in /usr/local/lib/python3.7/dist-packages (from google-auth<3,>=1.6.3->tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (4.8)\n",
-            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.7/dist-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (1.3.0)\n",
-            "Requirement already satisfied: importlib-metadata>=4.4 in /usr/local/lib/python3.7/dist-packages (from markdown>=2.6.8->tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (4.8.2)\n",
-            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.4->markdown>=2.6.8->tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (3.6.0)\n",
-            "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /usr/local/lib/python3.7/dist-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (0.4.8)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (1.24.3)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (3.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (2021.10.8)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.21.0->tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (2.10)\n",
-            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard~=2.5->tensorflow~=2.5.0->tnt-tensorflow==0.1.0) (3.1.1)\n",
-            "Installing collected packages: tnt-tensorflow\n",
-            "Successfully installed tnt-tensorflow-0.1.0\n"
+            "Collecting tnt-tensorflow\n",
+            "  Downloading tnt_tensorflow-0.1.0-py3-none-any.whl (10 kB)\n",
+            "Collecting einops~=0.3.0\n",
+            "  Downloading einops-0.3.2-py3-none-any.whl (25 kB)\n",
+            "Requirement already satisfied: tensorflow>=2.5.0 in /usr/local/lib/python3.7/dist-packages (from tnt-tensorflow) (2.7.0)\n",
+            "Requirement already satisfied: six>=1.12.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (1.15.0)\n",
+            "Requirement already satisfied: wheel<1.0,>=0.32.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (0.37.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.6 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (3.10.0.2)\n",
+            "Requirement already satisfied: libclang>=9.0.1 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (12.0.0)\n",
+            "Requirement already satisfied: keras-preprocessing>=1.1.1 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (1.1.2)\n",
+            "Requirement already satisfied: flatbuffers<3.0,>=1.12 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (2.0)\n",
+            "Requirement already satisfied: termcolor>=1.1.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (1.1.0)\n",
+            "Requirement already satisfied: google-pasta>=0.1.1 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (0.2.0)\n",
+            "Requirement already satisfied: numpy>=1.14.5 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (1.19.5)\n",
+            "Requirement already satisfied: gast<0.5.0,>=0.2.1 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (0.4.0)\n",
+            "Requirement already satisfied: tensorboard~=2.6 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (2.7.0)\n",
+            "Requirement already satisfied: tensorflow-io-gcs-filesystem>=0.21.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (0.22.0)\n",
+            "Requirement already satisfied: protobuf>=3.9.2 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (3.17.3)\n",
+            "Requirement already satisfied: keras<2.8,>=2.7.0rc0 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (2.7.0)\n",
+            "Requirement already satisfied: tensorflow-estimator<2.8,~=2.7.0rc0 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (2.7.0)\n",
+            "Requirement already satisfied: absl-py>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (0.12.0)\n",
+            "Requirement already satisfied: wrapt>=1.11.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (1.13.3)\n",
+            "Requirement already satisfied: opt-einsum>=2.3.2 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (3.3.0)\n",
+            "Requirement already satisfied: h5py>=2.9.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (3.1.0)\n",
+            "Requirement already satisfied: grpcio<2.0,>=1.24.3 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (1.42.0)\n",
+            "Requirement already satisfied: astunparse>=1.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=2.5.0->tnt-tensorflow) (1.6.3)\n",
+            "Requirement already satisfied: cached-property in /usr/local/lib/python3.7/dist-packages (from h5py>=2.9.0->tensorflow>=2.5.0->tnt-tensorflow) (1.5.2)\n",
+            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (3.3.6)\n",
+            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (1.0.1)\n",
+            "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (0.4.6)\n",
+            "Requirement already satisfied: google-auth<3,>=1.6.3 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (1.35.0)\n",
+            "Requirement already satisfied: tensorboard-data-server<0.7.0,>=0.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (0.6.1)\n",
+            "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (1.8.0)\n",
+            "Requirement already satisfied: requests<3,>=2.21.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (2.23.0)\n",
+            "Requirement already satisfied: setuptools>=41.0.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (57.4.0)\n",
+            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.7/dist-packages (from google-auth<3,>=1.6.3->tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (0.2.8)\n",
+            "Requirement already satisfied: rsa<5,>=3.1.4 in /usr/local/lib/python3.7/dist-packages (from google-auth<3,>=1.6.3->tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (4.8)\n",
+            "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from google-auth<3,>=1.6.3->tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (4.2.4)\n",
+            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.7/dist-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (1.3.0)\n",
+            "Requirement already satisfied: importlib-metadata>=4.4 in /usr/local/lib/python3.7/dist-packages (from markdown>=2.6.8->tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (4.8.2)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.4->markdown>=2.6.8->tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (3.6.0)\n",
+            "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /usr/local/lib/python3.7/dist-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (0.4.8)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (1.24.3)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (2.10)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (2021.10.8)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (3.0.4)\n",
+            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard~=2.6->tensorflow>=2.5.0->tnt-tensorflow) (3.1.1)\n",
+            "Installing collected packages: einops, tnt-tensorflow\n",
+            "Successfully installed einops-0.3.2 tnt-tensorflow-0.1.0\n"
           ]
         }
       ]
@@ -139,7 +141,7 @@
         "import tensorflow as tf\n",
         "from tnt import TNT"
       ],
-      "execution_count": 33,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -172,7 +174,7 @@
         "img = tf.random.uniform(shape=[5, 3, 256, 256])\n",
         "logits = tnt(img) # (5, 1000)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -182,12 +184,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bj5n7fYkpLiv",
-        "outputId": "253f7b38-cb22-4d17-d89d-7b7efd30696d"
+        "outputId": "ecc95e91-d132-4e25-dcf8-dbaca81a6664"
       },
       "source": [
         "logits.shape.as_list()"
       ],
-      "execution_count": 36,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,7 +199,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 4
         }
       ]
     }
